OldArchive/ccf866777e637febcac2ab849295bd28-61c3814520a8d4318f681038dc4b4da7/output
main.cpp: In function 'void test()':
main.cpp:2:5: error: 'Jellyot' has not been declared
     Jellyot::Shader a(Jellyot::ShaderType::Vertex, strVertexShader); // Destorys fine
     ^
main.cpp:2:21: error: expected ';' before 'a'
     Jellyot::Shader a(Jellyot::ShaderType::Vertex, strVertexShader); // Destorys fine
                     ^
main.cpp:3:2: error: 'Jellyot' has not been declared
  Jellyot::Shader b(Jellyot::ShaderType::Vertex, strVertexShader); // Sigsegv
  ^
main.cpp:3:18: error: expected ';' before 'b'
  Jellyot::Shader b(Jellyot::ShaderType::Vertex, strVertexShader); // Sigsegv
                  ^
main.cpp:4:2: error: 'Jellyot' has not been declared
  Jellyot::Shader c(Jellyot::ShaderType::Vertex, strVertexShader);
  ^
main.cpp:4:18: error: expected ';' before 'c'
  Jellyot::Shader c(Jellyot::ShaderType::Vertex, strVertexShader);
                  ^
main.cpp:5:2: error: 'Jellyot' has not been declared
  Jellyot::Shader d(Jellyot::ShaderType::Vertex, strVertexShader);
  ^
main.cpp:5:18: error: expected ';' before 'd'
  Jellyot::Shader d(Jellyot::ShaderType::Vertex, strVertexShader);
                  ^
